--- a/.github/workflows/stock_alert.yml
+++ b/.github/workflows/stock_alert.yml
@@ -9,7 +9,7 @@ on:
   pull_request:
     branches: [ master ]
   schedule:
-    - cron: '0 23 * * *'
+    - cron: '0 1 * * 1-5'
   
 jobs:
   build:
